--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sib-api-v3-sdk": "^8.5.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25"
   },
